package game.com.anish.world;

import java.awt.Color;

public class Floor extends Thing {

    Floor(World world) {
        super(Color.gray, (char) 250, world);
    }

}
